Updated index page and added lasgna webpage

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <head>Virgil's Recipes</head>
+        <title>Virgil's Recipes</title>
     </head>
-    
-    <body>
 
+    <body>
+        <h1>Odin Recipes</h1>
+        <a href="recipes/lasagna.html">Lasagna</a>
     </body>
 </html>
