--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -30,8 +30,8 @@
             <li><strong>Cook the meat</strong>: Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li>
             <li><strong>Cook the noodles</strong>: Boil the lasagna noodles in lightly salted water until they're al dente.</li>
             <li><strong>Make the cheese layer</strong>: Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.</li>
-            <li><strong>Assemble the lasagna</strong>: Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li>
-            <li><strong>Bake the lasagna></strong>: Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li>
+            <li><strong>Assemble the lasagna</strong>: Layer sthe ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li>
+            <li><strong>Bake the lasagna</strong>: Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li>
         </ol>
 
         <h3>How Long to Cook Lasagna</h3>
